// https://github.com/grpc/grpc/blob/master/doc/health-checking.md
syntax = "proto3";

package grpc.health.v1;

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);

  // Watch is not implemented since it's not called from grpc-health-probe
  // rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}
